--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 
         <h1 class="ca-text" id="copyText">
-           5pFW6ziMXDg7GSnXYuqjdV96aMqmKxipazdYHQTubonk
+           0xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
         </h1>
         <div class="buttons">
 
@@ -58,17 +58,17 @@
 
 
             <div class="top-buttons">
-                <a href="https://dexscreener.com/solana/5pFW6ziMXDg7GSnXYuqjdV96aMqmKxipazdYHQTubonk">
+                <a href="https://dexscreener.com/">
                     <img src="./images/top-dex.png" alt="" class="top-img top-left-img">
                 </a>
-                <a href="https://x.com/DGenZ0ne">
+                <a href="https://x.com/">
                     <img src="./images/top-x.png" alt="" class="top-img top-right-img">
                 </a>
             </div>
             <div class="bottom-buttons">
                 
                 </a>
-                <a href="https://t.me/DGenZ0ne">
+                <a href="https://t.me/">
                     <img src="./images/bottom-tg.png" alt="" class="bottom-img bottom-right-img">
                 </a>
             </div>
