--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="bottom-buttons">
                 
                 </a>
-                <a href="https://t.me/">
+                <a href="https://t.me/+MRQikpVq9K5kNThh">
                     <img src="./images/bottom-tg.png" alt="" class="bottom-img bottom-right-img">
                 </a>
             </div>
